--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -51,4 +51,11 @@ tr {
 .paginator-div{
 }
 
+// @media screen and (max-width:768px) {
+//     .paginator-container{
+//         width: 54vw;
+//         background-color: antiquewhite;
+//     }
+// }
+
 
