--- a/src/app/shop-list-page/shop-list-page.component.scss
+++ b/src/app/shop-list-page/shop-list-page.component.scss
@@ -6,7 +6,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    height: 100%;
+    // height: 100%;
 }
 
 .home-container{
@@ -25,9 +25,17 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 40px;
+    margin-right: 10px;
 }
 
 .add-shop-icon{
     display: flex;
     justify-content: flex-end;
 }
+.dashboard-container{
+    display: flex;
+    justify-content: center;
+}
+
+
+
