--- a/src/app/support-form/support-form.component.html
+++ b/src/app/support-form/support-form.component.html
@@ -92,15 +92,15 @@
       </div>
 
       <div class="form-group">
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name..." formControlName="name" name="name">
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name" formControlName="name" name="name">
       </div>
 
       <div class="form-group">
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email..." formControlName="email" name="email">
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email" formControlName="email" name="email">
       </div>
 
       <div class="form-group">
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message..." formControlName="message" name="message"></textarea>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message" formControlName="message" name="message"></textarea>
       </div>
       <div class="form-group">
         <button type="button" class="btn btn-primary" (click)="send()">Send</button>
