--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -3,7 +3,7 @@
         <div class="searchbar-div">
             <mat-form-field appearance="outline">
                 <mat-label>Search</mat-label>
-                <input matInput placeholder="Placeholder" [(ngModel)]="searchTerm">
+                <input matInput placeholder="Shop Name" [(ngModel)]="searchTerm">
                 <mat-icon matSuffix>
                     <span class="material-symbols-outlined">
                         search
